--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.9.2",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^2.0.22"
   }
 }
